[package]
name = "zen_sm"
version = "0.1.0"
authors = ["Rafael Rondao <rafael.rondao@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.18.0" # Gives us egui, epi and web+native backends
zen = { version = "0.1.0", path = "../zen" }
serde = { version = "1", features = ["derive"], optional = true }
rfd = "0.6.4"
wasm-bindgen-futures = "0.4.29"
futures = "0.3.19"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = ["Blob", "BlobPropertyBag", "Document", "Element", "HtmlElement", "HtmlAnchorElement", "Window", "Url"] }
lazy_static = "1.4.0"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }