[package]
name = "zen_sm"
version = "0.1.0"
authors = ["Rafael Rondao <rafael.rondao@gmail.com>"]
edition = "2021"

[[bin]]
name = "zen_sm_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { git = "https://github.com/emilk/egui" } # "0.18.0" # Gives us egui, epi and web+native backends
image = { version = "0.24.3", default-features = false, features = ["png"] }
puffin = "0.16"
puffin_http = "0.13"
zen = { version = "0.1.0", path = "../zen" }
serde = { version = "1", features = ["derive"], optional = true }
rfd = "0.6.4"
futures = "0.3.19"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "Window",
    "Url",
] }
lazy_static = "1.4.0"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
log = "0.4"
wasm-bindgen-futures = "0.4"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
